--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
             margin: 0 auto;
             background: url(../img/main.png) no-repeat 45px 30px;
 
-            display: flex;
+            padding-top: 240px;
             justify-content: center;
             align-items: center;
             align-content: center;
